--- a/sala.html
+++ b/sala.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col-md-6 d-flex align-items-end">
                  <button class="btn btn-primary px-4 me-2" id="btnFiltrar">Filtrar</button>
-                 <button class="btn btn-secondary px-4" id="btnLimparFiltro">Hoje</button>
+                 <button id="btnVerTodos" class="btn btn-secondary" type="button">Todos</button>
             </div>
         </div>
 
